k8s/letsencryptor.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: letsencryptor
  name: letsencryptor
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    name: letsencryptor
  type: NodePort
